source/blender/editors/transform/transform_ops.c
@@ -570,10 +570,8 @@ static bool transform_poll_property(const bContext *UNUSED(C),
 
   /* Snapping. */
   {
-    PropertyRNA *prop_snap = RNA_struct_find_property(op->ptr, "snap");
-    if (prop_snap && (prop_snap != prop) &&
-        (RNA_property_boolean_get(op->ptr, prop_snap) == false)) {
-      if (STRPREFIX(prop_id, "snap") || STRPREFIX(prop_id, "use_snap")) {
+    if (STREQ(prop_id, "use_snap_project")) {
+      if (RNA_boolean_get(op->ptr, "snap") == false) {
         return false;
       }
     }
@@ -626,7 +624,7 @@ void Transform_Properties(struct wmOperatorType *ot, int flags)
 
   if (flags & P_MIRROR) {
     prop = RNA_def_boolean(ot->srna, "mirror", 0, "Mirror Editing", "");
-    if (flags & P_MIRROR_DUMMY) {
+    if ((flags & P_MIRROR_DUMMY) == P_MIRROR_DUMMY) {
       /* only used so macros can disable this option */
       RNA_def_property_flag(prop, PROP_HIDDEN);
     }
@@ -660,17 +658,17 @@ void Transform_Properties(struct wmOperatorType *ot, int flags)
     prop = RNA_def_boolean(ot->srna, "snap", false, "Use Snapping Options", "");
     RNA_def_property_flag(prop, PROP_HIDDEN);
 
-    prop = RNA_def_enum(ot->srna,
-                        "snap_elements",
-                        rna_enum_snap_element_items,
-                        SCE_SNAP_MODE_INCREMENT,
-                        "Snap to Elements",
-                        "");
-    RNA_def_property_flag(prop, PROP_ENUM_FLAG);
+    if ((flags & P_GEO_SNAP) == P_GEO_SNAP) {
+      prop = RNA_def_enum(ot->srna,
+                          "snap_elements",
+                          rna_enum_snap_element_items,
+                          SCE_SNAP_MODE_INCREMENT,
+                          "Snap to Elements",
+                          "");
+      RNA_def_property_flag(prop, PROP_HIDDEN | PROP_ENUM_FLAG);
 
-    RNA_def_boolean(ot->srna, "use_snap_project", false, "Project Individual Elements", "");
+      RNA_def_boolean(ot->srna, "use_snap_project", false, "Project Individual Elements", "");
 
-    if (flags & P_GEO_SNAP) {
       /* TODO(@gfxcoder): Rename `snap_target` to `snap_source` to avoid previous ambiguity of
        * "target" (now, "source" is geometry to be moved and "target" is geometry to which moved
        * geometry is snapped).  Use "Source snap point" and "Point on source that will snap to
@@ -686,33 +684,20 @@ void Transform_Properties(struct wmOperatorType *ot, int flags)
       prop = RNA_def_boolean(ot->srna, "use_snap_nonedit", true, "Target: Include Non-Edited", "");
       RNA_def_property_flag(prop, PROP_HIDDEN);
       prop = RNA_def_boolean(
-          ot->srna, "use_snap_selectable_only", false, "Target: Exclude Non-Selectable", "");
-      RNA_def_property_flag(prop, PROP_HIDDEN);
-
-      /* Face Nearest options */
-      prop = RNA_def_boolean(
-          ot->srna, "use_snap_to_same_target", false, "Snap to Same Target", "");
-      RNA_def_property_flag(prop, PROP_HIDDEN);
-      prop = RNA_def_int(
-          ot->srna, "snap_face_nearest_steps", 1, 1, 32767, "Face Nearest Steps", "", 1, 32767);
+          ot->srna, "use_snap_selectable", true, "Target: Exclude Non-Selectable", "");
       RNA_def_property_flag(prop, PROP_HIDDEN);
 
       prop = RNA_def_float_vector(
           ot->srna, "snap_point", 3, NULL, -FLT_MAX, FLT_MAX, "Point", "", -FLT_MAX, FLT_MAX);
       RNA_def_property_flag(prop, PROP_HIDDEN);
 
-      if (flags & P_ALIGN_SNAP) {
+      if ((flags & P_ALIGN_SNAP) == P_ALIGN_SNAP) {
         prop = RNA_def_boolean(ot->srna, "snap_align", false, "Align with Point Normal", "");
         RNA_def_property_flag(prop, PROP_HIDDEN);
         prop = RNA_def_float_vector(
             ot->srna, "snap_normal", 3, NULL, -FLT_MAX, FLT_MAX, "Normal", "", -FLT_MAX, FLT_MAX);
         RNA_def_property_flag(prop, PROP_HIDDEN);
       }
-    }
-    else {
-      prop = RNA_def_boolean(
-          ot->srna, "use_snap_selectable_only", false, "Target: Exclude Non-Selectable", "");
-      RNA_def_property_flag(prop, PROP_HIDDEN);
     }
   }
 
@@ -1165,7 +1150,7 @@ static void TRANSFORM_OT_edge_slide(struct wmOperatorType *ot)
                   "When Even mode is active, flips between the two adjacent edge loops");
   RNA_def_boolean(ot->srna, "use_clamp", true, "Clamp", "Clamp within the edge extents");
 
-  Transform_Properties(ot, P_MIRROR | P_SNAP | P_CORRECT_UV);
+  Transform_Properties(ot, P_MIRROR | P_GEO_SNAP | P_CORRECT_UV);
 }
 
 static void TRANSFORM_OT_vert_slide(struct wmOperatorType *ot)
@@ -1200,7 +1185,7 @@ static void TRANSFORM_OT_vert_slide(struct wmOperatorType *ot)
                   "When Even mode is active, flips between the two adjacent edge loops");
   RNA_def_boolean(ot->srna, "use_clamp", true, "Clamp", "Clamp within the edge extents");
 
-  Transform_Properties(ot, P_MIRROR | P_SNAP | P_CORRECT_UV);
+  Transform_Properties(ot, P_MIRROR | P_GEO_SNAP | P_CORRECT_UV);
 }
 
 static void TRANSFORM_OT_edge_crease(struct wmOperatorType *ot)
